<resources>
    <string name="app_name">MyListFilms</string>
    <string name="test_film_name">Star Wars: The Clone Wars</string>
    <string name="test_year_film">2008</string>
    <string name="image_description">image</string>
    <string name="test_user_scope">User Scope</string>
    <string name="test_scope_value">75</string>
    <string name="test_genres">Action, Drama, Cartoon, Adventures, Fantastic</string>
    <string name="duration_value">22m</string>
    <string name="test_released">Released:</string>
    <string name="test_overview">Overview</string>
    <string name="test_description">Великая Армия Республики, ведомая Йодой, Мейсом Винду, Оби-Ваном Кеноби и другими рыцарями-джедаями, сражается против Новой Армии Дроидов сепаратистов.</string>
</resources>