<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#754D4D">

    <View
        android:id="@+id/view_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="@+id/background_imageView"
        app:layout_constraintEnd_toEndOf="@+id/background_imageView"
        app:layout_constraintStart_toStartOf="@+id/background_imageView"
        app:layout_constraintTop_toTopOf="@+id/background_imageView" />


    <ImageView
        android:id="@+id/background_imageView"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:alpha="0.6"
        android:contentDescription="@string/image_description"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/test_poster_film" />

    <ImageView
        android:id="@+id/poster_imageView"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="-145dp"
        android:contentDescription="@string/image_description"
        android:src="@drawable/test_poster_film"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/background_imageView" />

    <TextView
        android:id="@+id/name_film_textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:singleLine="false"
        android:text="@string/test_film_name"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="34sp"
        app:autoSizeMinTextSize="24sp"
        app:autoSizeStepGranularity="10sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/poster_imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/view_background"
        app:layout_constraintTop_toTopOf="@+id/view_background" />

    <TextView
        android:id="@+id/released_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="-8dp"
        android:text="@string/test_released"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/poster_imageView"
        app:layout_constraintTop_toTopOf="@+id/poster_imageView" />

    <TextView
        android:id="@+id/year_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/test_year_film"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/released_textView"
        app:layout_constraintTop_toTopOf="@+id/released_textView" />

    <TextView
        android:id="@+id/duration_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/duration_value"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/released_textView"
        app:layout_constraintTop_toBottomOf="@+id/released_textView" />

    <TextView
        android:id="@+id/genres_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/test_genres"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/released_textView"
        app:layout_constraintTop_toBottomOf="@+id/duration_textView" />

    <ProgressBar
        android:id="@+id/scope_progressBar"
        style="@style/CircularDeterminateProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progress="75"
        app:layout_constraintStart_toStartOf="@+id/genres_textView"
        app:layout_constraintTop_toBottomOf="@+id/genres_textView" />

    <TextView
        android:id="@+id/scope_value_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_scope_value"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/scope_progressBar"
        app:layout_constraintEnd_toEndOf="@+id/scope_progressBar"
        app:layout_constraintStart_toStartOf="@+id/scope_progressBar"
        app:layout_constraintTop_toTopOf="@+id/scope_progressBar" />

    <TextView
        android:id="@+id/scope_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/test_user_scope"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/scope_progressBar"
        app:layout_constraintStart_toEndOf="@+id/scope_progressBar"
        app:layout_constraintTop_toTopOf="@+id/scope_progressBar" />

    <TextView
        android:id="@+id/overview_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/test_overview"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/poster_imageView" />

    <TextView
        android:id="@+id/description_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:text="@string/test_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overview_textView" />

</androidx.constraintlayout.widget.ConstraintLayout>



