<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ProgressBar
        android:id="@+id/scope_progressBar"
        style="@style/CircularDeterminateProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="-23dp"
        android:elevation="3dp"
        android:progress="75"
        app:layout_constraintStart_toStartOf="@+id/card_poster"
        app:layout_constraintTop_toBottomOf="@+id/card_poster" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="3dp"
        android:text="@string/test_scope_value"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/scope_progressBar"
        app:layout_constraintEnd_toEndOf="@+id/scope_progressBar"
        app:layout_constraintStart_toStartOf="@+id/scope_progressBar"
        app:layout_constraintTop_toTopOf="@+id/scope_progressBar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_poster"
        android:layout_width="150dp"
        android:layout_height="220dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_poster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/test_poster_film"
            android:contentDescription="@string/image_description" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_film_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/test_film_name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scope_progressBar" />

    <TextView
        android:id="@+id/text_film_year"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/test_year_film"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_film_name" />
</androidx.constraintlayout.widget.ConstraintLayout>